Fixed vertical alignment

--- a/example/style/style.css
+++ b/example/style/style.css
@@ -13,6 +13,7 @@ body {
 }
 
 .swatch {
+	height: 100%;
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -21,6 +22,7 @@ body {
 .swatch-color-value {
 	display: block;
 
+	text-transform: uppercase;
 	font-family: sans-serif;
 	font-size: 24px;
 }
